syntax = "proto3";

package userservice;

option java_multiple_files = true;
option java_package = "is.flores.exchange.grpc.userservice";
option java_outer_classname = "UserServiceProto";

// The greeting service definition.
service UserService {
  // Sends a greeting
  rpc FetchJwt (FetchJwtRequest) returns (FetchJwtResponse) {}
}

// The request message containing the user's name.
message FetchJwtRequest {
  string name = 1;
}

// The response message containing the greetings
message FetchJwtResponse {
  string jwt = 1;
}